# classbank-benchmark-downloader

./: .env.example  .gitignore  DATA_PIPELINE_REPORT.md  README.md  download_classbank.py  download_media.py  download_metadata.py  download_timss_media.py  download_timss_transcripts.py  download_transcripts.py  parse_chat.py  preprocess_transcripts.py  pyproject.toml  requirements.txt  run_benchmark.py  run_benchmark_local.py  run_download_media.py  run_download_metadata.py  run_download_timss.py  run_download_transcripts.py  run_quality_filter.py  separate_warn_files.py  test_cha_to_json.py
.kiro/specs/cha-to-json-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
benchmark/: __init__.py  config.py  diarization.py  evaluation.py  llm_client.py  prompts.py  semantic_wer.py  statistics.py
benchmark/engines/: __init__.py  dicow_engine.py  elevenlabs_engine.py  gemini_engine.py  whisperx_engine.py
docs/: BENCHMARK_METHODOLOGY.md  colab-setup-guide.md  create_graphs.py  local-models-setup.md  media_distribution.md  media_listing.csv  simple_graph.py
pipeline/: __init__.py  auth.py  config.py  quality_filter.py
pipeline/download/: __init__.py  helpers.py  media.py  metadata.py  timss_media.py  timss_transcripts.py  transcripts.py
tests/: __init__.py  conftest.py  test_diarization.py  test_gemini_content_extraction.py  test_pipeline_integration.py  test_semantic_wer.py  test_semantic_wer_integration.py  test_speaker_mapping.py  test_verification.py
