[project]
name = "classbank-benchmark"
version = "1.0.0"
description = "ASR benchmark pipeline for classroom audio using TalkBank ClassBank dataset"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pylangacq>=0.18.0",
    # Benchmark pipeline
    "jiwer>=3.0.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "whisper-normalizer>=0.1.10",
    "pyannote-metrics>=4.0.0",
    "google-genai>=1.0.0",
    "elevenlabs>=1.0.0",
    "json-repair>=0.28.0",
    "boto3>=1.28.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-aws>=0.2.0",
]

[project.optional-dependencies]
whisperx = [
    "whisperx>=3.3.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
]
dicow = [
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "diarizen @ git+https://github.com/BUTSpeechFIT/DiariZen.git",
]
local = [
    "whisperx>=3.3.0",
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "diarizen @ git+https://github.com/BUTSpeechFIT/DiariZen.git",
]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]
